@startuml

title __DOOR's Class Diagram__\n

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace door {
        class com.codecool.dungeoncrawl.logic.door.ClosedDoor {
            + ClosedDoor()
            + getTileName()
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace door {
        abstract class com.codecool.dungeoncrawl.logic.door.Door {
            - isOpen : boolean
            + Door()
            + isOpen()
            + setOpen()
        }
      }
    }
  }
  

  namespace com.codecool.dungeoncrawl {
    namespace logic {
      namespace door {
        class com.codecool.dungeoncrawl.logic.door.OpenDoor {
            + OpenDoor()
            + getTileName()
        }
      }
    }
  }
  

  com.codecool.dungeoncrawl.logic.door.ClosedDoor -up-|> com.codecool.dungeoncrawl.logic.door.Door
  com.codecool.dungeoncrawl.logic.door.Door .up.|> com.codecool.dungeoncrawl.logic.Drawable
  com.codecool.dungeoncrawl.logic.door.Door o-- com.codecool.dungeoncrawl.logic.Cell : cell
  com.codecool.dungeoncrawl.logic.door.OpenDoor -up-|> com.codecool.dungeoncrawl.logic.door.Door


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
